[package]
name = "typeshelp-server"
version = "0.1.0"
authors = ["Peter Holak"]

[dependencies]
rouille = "3.0.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
strum_macros = "0.13.0"
rusqlite = { version = "0.14.0", features = ["bundled"] }
postgres = "0.15.2"
r2d2 = "0.8.2"
r2d2_sqlite = "0.6.0"
r2d2_postgres = "0.14.0"
dotenv = "0.13.0"
ctrlc = { version = "3.1.1", features = ["termination"] }
